--- a/index.html
+++ b/index.html
@@ -1,61 +1,41 @@
 <!doctype html>
 <html lang="ko">
 <head>
-  <!-- [필수] 문서 인코딩/반응형 뷰포트 -->
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <!-- 문서 기본 -->
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <!-- [SEO/OG] 페이지별로 title/description은 알맞게 수정 -->
-  <title>강반석 포트폴리오 | 데이터 기반 PM형 포트폴리오 </title>
+  <!-- 메타 -->
+  <title>강반석 포트폴리오 | 데이터 기반 PM형 포트폴리오</title>
   <meta name="description" content="데이터 기반 사고를 시각적으로 표현하는 PM형 포트폴리오. 프로젝트·데이터 인사이트·브랜딩·성장 일지로 통합 역량을 보여줍니다.">
-  <meta name="keywords" content="강반석, 포트폴리오, 데이터분석, PM, 마케팅, 브랜딩">
-  <meta name="theme-color" content="#0f0f0f">
-  <!-- body 끝나기 직전에 로드 -->
-  <script src="assets/js/main.js" defer></script>
-  <script src="assets/js/index.js" defer></script>
+  <meta name="theme-color" content="#0E0E10" />
 
-  <!-- [파비콘/아이콘] 내부 assets 사용 (필요 시 경로 교체) -->
-  <link rel="icon" href="assets/favicon/favicon-32.png" sizes="32x32">
-  <link rel="icon" href="assets/favicon/favicon-16.png" sizes="16x16">
-  <link rel="apple-touch-icon" href="assets/favicon/apple-touch-icon.png">
-
-  <!-- [폰트] 시스템 폰트 우선. 추후 Pretendard/Noto를 로컬 호스팅 시 main.css에서 @font-face 추가 -->
-  <style>
-    :root{ --font-sans: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans KR", "Apple SD Gothic Neo", "Malgun Gothic", sans-serif; }
-  </style>
-
-  <!-- [전역 CSS] 색/타이포/레이아웃 토큰 -->
-  <link rel="stylesheet" href="assets/css/main.css">
-  <!-- ✅ [인덱스 전용 CSS] 히어로/프로필/장식/모션 등 index 한정 스타일 -->
-  <link rel="stylesheet" href="assets/css/index.css">
-
-  <!-- [FOUC 방지] 초기 로드 시 저장된 테마(light/dark) 즉시 적용 -->
+  <!-- FOUC 방지: 저장된 테마를 즉시 적용 -->
   <script>
-    (function(){
-      try{
-        const saved = localStorage.getItem("bs-theme");
-        if(saved){ document.documentElement.setAttribute("data-theme", saved); }
-      }catch(e){}
-    })();
+    (function(){ try{
+      const saved = localStorage.getItem("bs-theme");
+      if(saved){ document.documentElement.setAttribute("data-theme", saved); }
+    }catch(e){} })();
   </script>
+
+  <!-- 전역·인덱스 CSS -->
+  <link rel="stylesheet" href="assets/css/main.css" />
+  <link rel="stylesheet" href="assets/css/index.css" />
 </head>
+
 <body id="top" class="page page--home">
   <!-- =========================
-       헤더(글로벌 내비)
-       - 수정 포인트: 메뉴 항목/순서 변경 시 href만 교체
+       고정 헤더
   ========================== -->
-  <header id="site-header" class="bs-header" role="banner">
+  <header id="site-header" class="bs-header" role="banner" aria-label="상단 내비게이션">
     <div class="bs-container">
+      <!-- 로고(그라디언트 텍스트) -->
       <a href="index.html" class="bs-logo" aria-label="강반석 포트폴리오 홈">
-        <span class="bs-logo__text">BanSeok Portfolio</span>
+        <span class="logo-main">BanSeok</span>
+        <span class="logo-sub">Portfolio</span>
       </a>
 
-      <!-- 다크/라이트 모드 토글 -->
-      <button id="themeToggle" class="bs-theme-toggle" type="button" aria-pressed="false" aria-label="테마 전환(라이트/다크)">
-        <span class="icon" aria-hidden="true">🌙</span>
-        <span class="bs-sr-only">테마 전환</span>
-      </button>
-
+      <!-- 내비(우측 정렬) -->
       <nav id="site-nav" class="bs-nav" role="navigation" aria-label="주요 메뉴">
         <ul class="bs-nav__list">
           <li><a class="bs-nav__link is-active" href="index.html">홈</a></li>
@@ -69,77 +49,69 @@
     </div>
   </header>
 
+  <!-- 우측 상단 고정 테마 토글(아이콘만) -->
+  <button id="themeToggle" class="theme-toggle" type="button" aria-pressed="false" aria-label="테마 전환">
+    <span class="icon" aria-hidden="true">🌙</span>
+  </button>
+
   <!-- =========================
-       메인(히어로 + 오른쪽 프로필/요약)
+       메인 히어로 (풀 배경 + 3행 타이핑 + 요약 패널)
   ========================== -->
   <main id="main" class="bs-main" role="main">
-    <section id="hero" class="bs-hero" aria-label="인트로">
-      <!-- 배경 장식 (index.css에서 그리드/노이즈/그라디언트 처리) -->
-      <div class="bs-hero__bg" aria-hidden="true"></div>
+    <section id="hero" class="bs-hero bs-hero--full" aria-label="인트로">
+      <!-- 풀 배경 이미지 스택 -->
+      <div class="hero-bg" aria-hidden="true">
+        <!-- 이미지 경로 교체 권장 -->
+        <img class="hero-bg__img is-active" src="assets/img/profile/profile-1.jpg" alt="">
+        <img class="hero-bg__img"           src="assets/img/profile/profile-2.jpg" alt="">
+        <img class="hero-bg__img"           src="assets/img/profile/profile-3.jpg" alt="">
+        <!-- 가독성용 비네트 -->
+        <div class="hero-bg__vignette"></div>
+      </div>
 
       <div class="bs-hero__inner">
-        <!-- 좌측: 3행 타이핑 (저는 / [타이핑] / 입니다) -->
+        <!-- 좌: 3행 타이핑 (1=왼쪽, 2=가운데, 3=오른쪽 고정) -->
         <h1 class="bs-hero__title">
-          <!-- [고정 1행] -->
           <span class="bs-hero__line bs-hero__line--fixed-top" aria-hidden="true">저는</span>
 
-          <!-- [타이핑 2행] 수정 포인트: data-roles에 직무 목록을 콤마(,)로 추가/수정 -->
+          <!-- data-roles에 직무 목록을 콤마(,)로 나열 -->
           <span id="typingTarget"
                 class="bs-hero__line bs-hero__line--typing"
                 role="status" aria-live="polite"
-                data-roles="마케터,프로젝트 매니저,데이터 분석가">데이터 분석가</span>
+                data-roles="데이터 분석가,프로젝트 매니저,마케터">데이터 분석가</span>
 
-          <!-- [고정 3행] -->
           <span class="bs-hero__line bs-hero__line--fixed-bottom" aria-hidden="true">입니다</span>
 
-          <!-- 소셜: 링크 교체 -->
-          <div class="bs-social">
-            <a class="bs-social__link" href="https://github.com/" aria-label="GitHub로 이동">🐙</a>
-            <a class="bs-social__link" href="mailto:your@mail.com" aria-label="이메일 보내기">✉️</a>
-            <a class="bs-social__link" href="https://instagram.com/" aria-label="인스타그램으로 이동">📷</a>
-            <a class="bs-social__link" href="https://banseok-data-analysis.tistory.com/" aria-label="블로그로 이동">📝</a>
-            <a class="bs-social__link" href="https://www.notion.so/" aria-label="노션으로 이동">📓</a>
+          <!-- 소셜 아이콘(이모지) -->
+          <div class="bs-social" aria-label="소셜 링크">
+            <a class="bs-social__link" href="https://github.com/" aria-label="GitHub">🐙</a>
+            <a class="bs-social__link" href="mailto:your@mail.com" aria-label="이메일">✉️</a>
+            <a class="bs-social__link" href="https://instagram.com/" aria-label="인스타그램">📷</a>
+            <a class="bs-social__link" href="https://banseok-data-analysis.tistory.com/" aria-label="블로그">📝</a>
+            <a class="bs-social__link" href="https://www.notion.so/" aria-label="노션">📓</a>
           </div>
         </h1>
 
-        <!-- 우측: 프로필 3장 슬라이더 + 요약 패널 스택 -->
-        <div class="ix-right-col">
-          <!-- ✅ 프로필 박스(3장 자동 슬라이드 + 모션)
-               - 수정 포인트: 이미지를 본인 경로로 교체
-               - 권장 비율: 3:4 (필요 시 index.css의 --ix-profile-ratio 변경)
-               - data-interval(ms): 자동 전환 속도 -->
-          <section class="ix-hero-profile" aria-label="개인 프로필">
-            <figure class="ix-profile" data-interval="3000">
-              <img class="ix-profile__img is-active" src="assets/img/profile/profile-1.jpg" alt="강반석, 실내 자연광 포트레이트">
-              <img class="ix-profile__img"           src="assets/img/profile/profile-2.jpg" alt="강반석, 노트북 작업 모습">
-              <img class="ix-profile__img"           src="assets/img/profile/profile-3.jpg" alt="강반석, 야외 스냅 포즈">
-              <!-- 접근성: 슬라이드 일시정지/재생 -->
-              <button class="ix-profile__toggle" type="button" aria-pressed="false" aria-label="프로필 슬라이드 일시정지">⏸</button>
-              <!-- <figcaption class="ix-profile__cap">데이터로 사고하고, 시각으로 소통합니다.</figcaption> -->
-            </figure>
-          </section>
-
-          <!-- 요약 정보 패널(선택적 문구 교체) -->
-          <aside class="ix-hero-pane" aria-label="요약 정보">
-            <div class="ix-hero-pane__kicker">데이터 중심 · PM형 포트폴리오</div>
-            <h2 class="ix-hero-pane__title">구조는 단순하게, 메시지는 일관되게</h2>
-            <p class="ix-hero-pane__desc">
-              프로젝트 → 데이터 인사이트 → 브랜딩 → 성장 일지로 이어지는 ‘사고 파이프라인’을 시각화합니다.
-              라이트/다크 테마와 반응형 구조는 정보 몰입을 돕습니다.
-            </p>
-            <div class="ix-hero-actions">
-              <a class="bs-btn bs-btn--accent" href="projects.html">프로젝트 보러가기</a>
-              <a class="bs-btn bs-btn--ghost" href="data-insight.html">데이터 인사이트</a>
-            </div>
-          </aside>
-        </div>
+        <!-- 우: 요약 패널 -->
+        <aside class="ix-hero-pane" aria-label="요약 정보">
+          <div class="ix-hero-pane__kicker">데이터 중심 · PM형 포트폴리오</div>
+          <h2 class="ix-hero-pane__title">구조는 단순하게, 메시지는 일관되게</h2>
+          <p class="ix-hero-pane__desc">
+            프로젝트 → 데이터 인사이트 → 브랜딩 → 성장 일지로 이어지는 ‘사고 파이프라인’을 시각화합니다.
+            라이트/다크 테마와 반응형 구조는 정보 몰입을 돕습니다.
+          </p>
+          <div class="ix-hero-actions">
+            <a class="bs-btn bs-btn--accent" href="projects.html">프로젝트 보러가기</a>
+            <a class="bs-btn bs-btn--ghost" href="data-insight.html">데이터 인사이트</a>
+          </div>
+        </aside>
       </div>
 
-      <!-- 히어로 하단 스크롤 인디케이터 -->
+      <!-- 하단 스크롤 인디케이터 -->
       <div class="ix-scroll-ind" aria-hidden="true"></div>
     </section>
 
-    <!-- (선택) 소개 섹션: 필요에 따라 삭제/문구 수정 -->
+    <!-- 선택: 소개 섹션(원하면 유지/수정) -->
     <section id="about" class="bs-section" aria-label="소개">
       <div class="bs-container">
         <h2 class="bs-section__title">데이터 기반 PM형 포트폴리오</h2>
@@ -150,14 +122,16 @@
     </section>
   </main>
 
-  <!-- =========================
-       푸터
-  ========================== -->
+  <!-- 푸터 -->
   <footer id="site-footer" class="bs-footer" role="contentinfo">
     <div class="bs-container">
       <p class="bs-footer__brand">© <span id="year"></span> banseok. 통합은 힘입니다.</p>
       <a class="bs-footer__top" href="#top" aria-label="맨 위로 이동">↑</a>
     </div>
   </footer>
+
+  <!-- 전역 JS / 인덱스 전용 JS -->
+  <script src="assets/js/main.js" defer></script>
+  <script src="assets/js/index.js" defer></script>
 </body>
 </html>
