--- a/projects.html
+++ b/projects.html
@@ -3,175 +3,105 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-
   <title>프로젝트 | 강반석 포트폴리오</title>
-  <meta name="description" content="강반석의 프로젝트 모음. 데이터 분석, PM, 마케팅, 브랜딩 사례를 한 페이지에서 탐색할 수 있습니다.">
+  <meta name="description" content="데이터·마케팅·브랜딩 프로젝트 모음과 상세 설명.">
 
-  <!-- 저장된 테마 즉시 적용(Fouc 방지) -->
+  <!-- 저장 테마 즉시 반영 -->
   <script>
-    (function(){ try{
-      const saved = localStorage.getItem("bs-theme");
-      if(saved){ document.documentElement.setAttribute("data-theme", saved); }
-    }catch(e){} })();
+    (function(){try{
+      const t=localStorage.getItem("bs-theme"); if(t) document.documentElement.setAttribute("data-theme",t);
+    }catch(e){}})();
   </script>
 
-  <!-- 전역/프로젝트 전용 CSS -->
   <link rel="stylesheet" href="assets/css/main.css" />
   <link rel="stylesheet" href="assets/css/projects.css" />
 </head>
 
-<body class="page page--projects" id="top">
-  <!-- 고정 헤더(전역) -->
-  <header id="site-header" class="bs-header" role="banner" aria-label="상단 내비게이션">
+<body id="top" class="page page--projects">
+  <!-- 헤더/네비: 인덱스와 동일 클래스 -->
+  <header id="site-header" class="bs-header" role="banner">
     <div class="bs-container">
       <a href="index.html" class="bs-logo" aria-label="강반석 포트폴리오 홈">
-        <span class="logo-main">BanSeok</span>
-        <span class="logo-sub">Portfolio</span>
+        <span class="logo-main">BanSeok</span><span class="logo-sub">Portfolio</span>
       </a>
-      <nav id="site-nav" class="bs-nav" role="navigation" aria-label="주요 메뉴">
+      <nav class="bs-nav" role="navigation" aria-label="주요 메뉴">
         <ul class="bs-nav__list">
-          <li><a class="bs-nav__link" href="index.html">홈</a></li>
-          <li><a class="bs-nav__link is-active" href="projects.html">프로젝트</a></li>
-          <li><a class="bs-nav__link" href="data-insight.html">데이터 인사이트</a></li>
-          <li><a class="bs-nav__link" href="branding.html">브랜딩</a></li>
-          <li><a class="bs-nav__link" href="reflection.html">성장 일지</a></li>
-          <li><a class="bs-nav__link" href="contact.html">연락처</a></li>
+          <li><a href="index.html">홈</a></li>
+          <li><a class="is-active" href="projects.html">프로젝트</a></li>
+          <li><a href="data-insight.html">데이터 인사이트</a></li>
+          <li><a href="branding.html">브랜딩</a></li>
+          <li><a href="reflection.html">성장 일지</a></li>
+          <li><a href="contact.html">연락처</a></li>
         </ul>
       </nav>
     </div>
   </header>
 
-  <!-- 테마 토글(아이콘만, 우측 고정 – 전역 JS로 동작) -->
+  <!-- 테마 토글 (아이콘만, 우상단 고정) -->
   <button id="themeToggle" class="theme-toggle" type="button" aria-pressed="false" aria-label="테마 전환">
-    <span class="icon" aria-hidden="true">🌙</span>
+    <span class="icon">🌙</span>
   </button>
 
-  <main id="main" class="bs-main" role="main">
-    <!-- 페이지 헤더 -->
-    <section class="pj-hero" aria-label="프로젝트 소개">
+  <main class="bs-main" role="main">
+    <!-- Hero -->
+    <section class="pj-hero">
       <div class="bs-container">
         <h1 class="pj-title">프로젝트</h1>
-        <p class="pj-sub">데이터 기반 의사결정과 실행으로 완성한 사례들입니다. 아래 검색/필터를 이용해 빠르게 찾아보세요.</p>
+        <p class="pj-sub">데이터 분석 · 마케팅 · 브랜딩 · 제품기획 등 카테고리로 정리했습니다.</p>
       </div>
     </section>
 
-    <!-- 컨트롤 바: 검색/필터/정렬 -->
-    <section class="pj-controls" aria-label="프로젝트 필터">
-      <div class="bs-container pj-controls__inner">
-        <!-- 검색 -->
-        <label class="pj-search">
-          <span class="pj-search__icon" aria-hidden="true">🔎</span>
-          <input id="pjSearch" type="search" placeholder="프로젝트 제목, 키워드 검색…" aria-label="프로젝트 검색" />
-        </label>
-
-        <!-- 태그(필터 칩) — data-filter에 연결 -->
-        <div class="pj-tags" role="group" aria-label="태그 필터">
-          <!-- [수정 포인트] 필요한 태그 추가/수정 -->
-          <button class="pj-tag is-on" data-filter="all" aria-pressed="true">전체</button>
-          <button class="pj-tag" data-filter="data">데이터 분석</button>
-          <button class="pj-tag" data-filter="pm">PM</button>
-          <button class="pj-tag" data-filter="marketing">마케팅</button>
-          <button class="pj-tag" data-filter="branding">브랜딩</button>
-          <button class="pj-tag" data-filter="etc">기타</button>
-        </div>
-
-        <!-- 정렬 -->
-        <label class="pj-sort">
-          <span class="pj-sort__label">정렬</span>
-          <select id="pjSort" aria-label="정렬 선택">
-            <option value="new">최신순</option>
-            <option value="old">오래된순</option>
-            <option value="az">제목 A→Z</option>
-            <option value="za">제목 Z→A</option>
-          </select>
-        </label>
+    <!-- 필터칩 -->
+    <section class="pj-filter" aria-label="카테고리 필터">
+      <div class="bs-container pj-filter__inner">
+        <button class="chip is-active" data-tag="all">전체</button>
+        <button class="chip" data-tag="데이터분석">#데이터분석</button>
+        <button class="chip" data-tag="마케팅">#마케팅</button>
+        <button class="chip" data-tag="브랜딩">#브랜딩</button>
+        <button class="chip" data-tag="PM">#PM</button>
+        <button class="chip" data-tag="웹">#웹</button>
+        <button class="chip" data-tag="자동화">#자동화</button>
       </div>
     </section>
 
     <!-- 카드 그리드 -->
     <section class="pj-grid" aria-label="프로젝트 목록">
-      <div class="bs-container">
-        <ul id="pjList" class="pj-cards" role="list">
-          <!-- ===== 카드 샘플 1 ===== -->
-          <li class="pj-card"
-              data-tags="data,pm"
-              data-date="2024-12-05"
-              data-title="이커머스 전환율 개선 A/B 테스트">
-            <article class="pj-article">
-              <a href="#" class="pj-thumb" aria-label="상세 보기(모달)">
-                <!-- [수정 포인트] 썸네일 이미지 경로 교체 -->
-                <img loading="lazy" src="assets/img/profile/profile-1.jpg" alt="전환율 개선 A/B 테스트 썸네일">
-                <span class="pj-badge">데이터 분석</span>
-              </a>
-              <div class="pj-body">
-                <h3 class="pj-name">이커머스 전환율 개선 A/B 테스트</h3>
-                <p class="pj-desc">GA4·Hotjar 기반 퍼널 진단 → 가설 3종 → A/B 실험 → 전환율 +12.8%p 개선.</p>
-                <div class="pj-meta">
-                  <span>2024.12</span>
-                  <ul class="pj-chiplist" aria-label="핵심 키워드">
-                    <li>GA4</li><li>AB-test</li><li>서버사이드 태깅</li>
-                  </ul>
-                </div>
-              </div>
-            </article>
-          </li>
-
-          <!-- ===== 카드 샘플 2 ===== -->
-          <li class="pj-card"
-              data-tags="pm,marketing"
-              data-date="2024-08-20"
-              data-title="구독형 서비스 온보딩 퍼널 재구성">
-            <article class="pj-article">
-              <a href="#" class="pj-thumb" aria-label="상세 보기(모달)">
-                <img loading="lazy" src="assets/img/profile/profile-2.jpg" alt="온보딩 퍼널 재구성 썸네일">
-                <span class="pj-badge">PM</span>
-              </a>
-              <div class="pj-body">
-                <h3 class="pj-name">구독형 서비스 온보딩 퍼널 재구성</h3>
-                <p class="pj-desc">JTBD 인터뷰→코호트 분석→체험→결제 흐름 단축. 첫 결제율 1.6→3.1%.</p>
-                <div class="pj-meta">
-                  <span>2024.08</span>
-                  <ul class="pj-chiplist"><li>Funnel</li><li>JTBD</li><li>Cohort</li></ul>
-                </div>
-              </div>
-            </article>
-          </li>
-
-          <!-- ===== 카드 샘플 3 ===== -->
-          <li class="pj-card"
-              data-tags="branding,marketing"
-              data-date="2023-11-10"
-              data-title="브랜드 리포지셔닝 & 캠페인">
-            <article class="pj-article">
-              <a href="#" class="pj-thumb" aria-label="상세 보기(모달)">
-                <img loading="lazy" src="assets/img/profile/profile-3.jpg" alt="브랜드 캠페인 썸네일">
-                <span class="pj-badge">브랜딩</span>
-              </a>
-              <div class="pj-body">
-                <h3 class="pj-name">브랜드 리포지셔닝 & 캠페인</h3>
-                <p class="pj-desc">세그먼트 재정의→핵심 메시지/톤 재정렬→UGC 캠페인. 브랜드 검색량 48%↑.</p>
-                <div class="pj-meta">
-                  <span>2023.11</span>
-                  <ul class="pj-chiplist"><li>UGC</li><li>세그먼트</li><li>메시지</li></ul>
-                </div>
-              </div>
-            </article>
-          </li>
-
-          <!-- 더 많은 카드… 같은 포맷으로 추가 -->
-        </ul>
-      </div>
+      <div class="bs-container pj-grid__inner" id="pjGrid"><!-- JS 렌더 --></div>
     </section>
   </main>
 
-  <footer id="site-footer" class="bs-footer" role="contentinfo">
+  <!-- 상세 시트(오버레이) -->
+  <div id="pjSheet" class="pj-sheet" hidden aria-hidden="true">
+    <div class="pj-sheet__backdrop" data-close></div>
+    <article class="pj-sheet__panel" role="dialog" aria-modal="true" aria-labelledby="pjTitle">
+      <button class="pj-sheet__close" type="button" aria-label="닫기" data-close>×</button>
+
+      <div class="pj-sheet__media">
+        <img id="pjImg" alt="" />
+      </div>
+
+      <header class="pj-sheet__head">
+        <h2 id="pjTitle"></h2>
+        <ul id="pjTags" class="tags"></ul>
+      </header>
+
+      <section class="pj-sheet__body">
+        <p id="pjDesc" class="pj-desc"></p>
+        <ul class="pj-meta" id="pjMeta"></ul>
+        <div class="pj-actions">
+          <a id="pjLink" class="bs-btn bs-btn--accent" target="_blank" rel="noopener">프로젝트 바로가기</a>
+        </div>
+      </section>
+    </article>
+  </div>
+
+  <footer class="bs-footer">
     <div class="bs-container">
       <p class="bs-footer__brand">© <span id="year"></span> banseok. 통합은 힘입니다.</p>
-      <a class="bs-footer__top" href="#top" aria-label="맨 위로 이동">↑</a>
+      <a class="bs-footer__top" href="#top">↑</a>
     </div>
   </footer>
 
-  <!-- 전역/프로젝트 전용 JS -->
   <script src="assets/js/main.js" defer></script>
   <script src="assets/js/projects.js" defer></script>
 </body>
