Refactor brand role and hero title formatting
Updated HTML structure for brand role and hero title.

--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
   <header class="topbar">
     <div class="container topbar__inner">
       <a class="brand" href="index.html" aria-label="홈으로">
-        <span class="brand__name">Banseok Kang</span>
-        <span class="brand__role">PM · Product Ops</span>
-      </a>
+    <span class="brand__name">Banseok Kang</span>
+    <span class="brand__role">PM / Product Ops</span>
+      </a>  
 
       <nav class="topbar__nav" aria-label="주요 메뉴">
         <a class="navlink" href="#featured">Portfolio</a>
@@ -56,9 +56,10 @@
           <p class="kicker">Data · Product · Decision Quality</p>
 
           <h1 class="title">
-            데이터로 <span class="accent">판단 기준</span>을 만들고<br>
-            구조로 <span class="accent">의사결정</span>을 안정화합니다.
-          </h1>
+          데이터로 <span class="accent">판단 기준</span>을 만들고<br>
+          구조로 <span class="accent">의사결정</span>을<br>
+         안정화합니다.
+</h1>
 
           <p class="subtitle">
             퍼널·리텐션·전환율로 문제를 정의하고, “무엇을 만들까”보다
