--- a/pm.html
+++ b/pm.html
@@ -116,6 +116,209 @@
         </div>
       </div>
     </section>
+<!-- Case Studies -->
+<section id="case-studies" class="section">
+  <div class="container">
+    <div class="section-head reveal">
+      <div>
+        <h2>Case Studies</h2>
+        <p>노션의 원본을 “웹에서 평가 가능한 구조”로 편집한 요약본입니다.</p>
+      </div>
+    </div>
+
+    <div class="case-grid">
+      <!-- Case 01 -->
+      <article class="case card reveal" aria-label="Case Study 1">
+        <header class="case__head">
+          <div class="case__kicker">Case 01</div>
+          <h3 class="case__title">퍼널·리텐션 분석으로 ‘경험 순서 재설계’ 결정</h3>
+          <p class="case__summary">
+            전환율 하락을 ‘기능 부족’이 아니라 ‘가치 인지 이전 이탈’ 문제로 재정의하고,
+            경험 흐름 조정으로 해결 방향을 도출한 사례.
+          </p>
+
+          <ul class="case__tags" aria-label="태그">
+            <li>Funnel</li>
+            <li>Retention</li>
+            <li>Problem Definition</li>
+            <li>Decision Trade-off</li>
+          </ul>
+
+          <div class="case__meta">
+            <div><span>Role</span><b>PM / 데이터 분석</b></div>
+            <div><span>North Star</span><b>가입 → 첫 행동 전환율</b></div>
+          </div>
+        </header>
+
+        <div class="case__body">
+          <section class="case__block">
+            <h4>문제 정의</h4>
+            <dl class="case__dl">
+              <div>
+                <dt>Fact</dt>
+                <dd>신규 가입자의 상당수가 첫 행동(핵심 기능 경험) 이전에 이탈.</dd>
+              </div>
+              <div>
+                <dt>Why</dt>
+                <dd>핵심 가치 경험 이전 이탈은 재방문/리텐션/LTV 하락으로 연결.</dd>
+              </div>
+              <div>
+                <dt>Hypothesis</dt>
+                <dd>기능이 부족해서가 아니라, 가치가 전달되기 전에 흐름에서 이탈한다.</dd>
+              </div>
+            </dl>
+          </section>
+
+          <section class="case__block">
+            <h4>지표 설계</h4>
+            <ul class="case__list">
+              <li><b>대표 지표</b>: 가입 → 첫 행동 전환율</li>
+              <li><b>행동 지표</b>: 첫 행동까지 평균 시간 / 첫 행동 도달 비율</li>
+              <li><b>착시 방지</b>: “전환↑”이지만 저품질 유입/우회 행동일 가능성 점검</li>
+            </ul>
+          </section>
+
+          <section class="case__block">
+            <h4>의사결정 트레이드오프</h4>
+            <div class="tradeoff">
+              <div class="tradeoff__col">
+                <h5>선택 A · 신규 기능 추가</h5>
+                <ul>
+                  <li>장점: 단기 체감 개선 가능</li>
+                  <li>단점: 가치 인지 문제(근본 원인) 해결 불명확</li>
+                </ul>
+              </div>
+              <div class="tradeoff__col">
+                <h5>선택 B · 경험 흐름 재설계</h5>
+                <ul>
+                  <li>장점: 기존 기능의 가치 전달 강화</li>
+                  <li>단점: 단기 성과 측정이 어려울 수 있음</li>
+                </ul>
+              </div>
+            </div>
+            <p class="case__decision">
+              <b>결론:</b> 신규 기능보다, 핵심 가치 체감까지의 <b>순서/맥락 재설계</b>를 우선.
+            </p>
+          </section>
+
+          <section class="case__block">
+            <h4>실행</h4>
+            <ul class="case__list">
+              <li>가입 직후 선택/입력 단계를 축소</li>
+              <li>가치를 가장 빠르게 체험하는 행동을 첫 단계로 재배치</li>
+              <li>초기 흐름의 선택지 수를 줄여 “망설임 비용” 감소</li>
+            </ul>
+          </section>
+
+          <section class="case__block">
+            <h4>결과 & 인사이트</h4>
+            <ul class="case__list">
+              <li><b>Result</b>: 대표 지표 방향성 개선(전환↑), 첫 행동까지 시간 단축</li>
+              <li><b>Insight</b>: 기능 자체보다 “전달 순서와 맥락”이 초기 행동에 더 큰 영향</li>
+            </ul>
+          </section>
+
+          <section class="case__block">
+            <h4>학습</h4>
+            <p class="case__learn">
+              “무엇을 만들까”보다 “무엇을 오해하지 않게 할까”를 먼저 고정하는 것이
+              의사결정 품질을 높인다.
+            </p>
+          </section>
+        </div>
+
+        <footer class="case__foot">
+          <a class="btn btn--primary" href="#evidence">Evidence로 이동</a>
+          <a class="btn btn--ghost" target="_blank" rel="noopener" href="https://www.notion.so/2cc2c27d7e468077ad0ee6eed83406f1">Notion 원문</a>
+          <a class="btn btn--ghost" target="_blank" rel="noopener" href="강반석 pm 이력서.pdf">관련 PDF</a>
+        </footer>
+      </article>
+
+      <!-- Case 02 -->
+      <article class="case card reveal" aria-label="Case Study 2">
+        <header class="case__head">
+          <div class="case__kicker">Case 02</div>
+          <h3 class="case__title">KPI를 ‘조회수’에서 ‘참여율’로 재정의해 콘텐츠 전략 전환</h3>
+          <p class="case__summary">
+            조회수 중심 KPI가 실제 가치(참여/반응)를 대표하지 못한다는 가설을 세우고,
+            참여율 기반의 판단 기준으로 전략을 재구성한 사례.
+          </p>
+
+          <ul class="case__tags" aria-label="태그">
+            <li>KPI Redefinition</li>
+            <li>Engagement</li>
+            <li>Experiment</li>
+            <li>Insight</li>
+          </ul>
+
+          <div class="case__meta">
+            <div><span>Role</span><b>분석 / 인사이트 도출</b></div>
+            <div><span>North Star</span><b>참여율(댓글·좋아요·시청 지속)</b></div>
+          </div>
+        </header>
+
+        <div class="case__body">
+          <section class="case__block">
+            <h4>문제 정의</h4>
+            <dl class="case__dl">
+              <div>
+                <dt>Fact</dt>
+                <dd>조회수 상위 콘텐츠가 참여율 상위 콘텐츠와 일치하지 않음.</dd>
+              </div>
+              <div>
+                <dt>Why</dt>
+                <dd>조회수만 보면 의사결정이 왜곡되어 “반응 없는 성장”으로 이어짐.</dd>
+              </div>
+              <div>
+                <dt>Hypothesis</dt>
+                <dd>참여율이 콘텐츠 가치/만족을 더 잘 대표하며 전략 기준이 되어야 한다.</dd>
+              </div>
+            </dl>
+          </section>
+
+          <section class="case__block">
+            <h4>지표 설계</h4>
+            <ul class="case__list">
+              <li><b>대표 지표</b>: 참여율(좋아요/댓글/완주율 등)</li>
+              <li><b>보조 지표</b>: 키워드 조합별 참여율 분포, 댓글 감성/의도</li>
+              <li><b>착시 방지</b>: 자극 키워드로 유입↑ / 만족↓ 가능성 체크</li>
+            </ul>
+          </section>
+
+          <section class="case__block">
+            <h4>실험/분석</h4>
+            <ul class="case__list">
+              <li>키워드 조합별로 참여율 비교</li>
+              <li>댓글 반응(질문/공감/반박 등) 패턴 분류</li>
+              <li>“트렌드형 키워드 vs 맥락 설명형 키워드” 성과 안정성 비교</li>
+            </ul>
+          </section>
+
+          <section class="case__block">
+            <h4>결과 & 인사이트</h4>
+            <ul class="case__list">
+              <li><b>Result</b>: 자극형은 클릭↑지만 참여 변동성↑</li>
+              <li><b>Insight</b>: 맥락형 조합이 참여 안정성이 높고 재방문 신호가 강함</li>
+            </ul>
+          </section>
+
+          <section class="case__block">
+            <h4>학습</h4>
+            <p class="case__learn">
+              KPI는 숫자가 아니라 <b>판단 기준</b>이다. 대표 지표가 바뀌면 전략의 우선순위도 바뀐다.
+            </p>
+          </section>
+        </div>
+
+        <footer class="case__foot">
+          <a class="btn btn--primary" href="#links">Links로 이동</a>
+          <a class="btn btn--ghost" target="_blank" rel="noopener" href="(노션_케이스2_링크)">Notion 원문</a>
+          <a class="btn btn--ghost" target="_blank" rel="noopener" href="(관련_자료_링크)">관련 자료</a>
+        </footer>
+      </article>
+    </div>
+  </div>
+</section>
 
     <!-- Evidence -->
     <section id="evidence" class="section">
