--- a/intern.html
+++ b/intern.html
@@ -130,6 +130,139 @@
           </div>
         </div>
       </div>
+      <!-- QA Accordion -->
+<section id="qa-accordion" class="section">
+  <div class="container">
+    <div class="section-head reveal">
+      <div>
+        <h2>QA 사고 프레임 (6)</h2>
+        <p>체크리스트가 아니라, “의사결정 오해”를 막는 안전장치로서의 QA입니다.</p>
+      </div>
+    </div>
+
+    <div class="qa card reveal" data-accordion>
+      <!-- 1 -->
+      <div class="qa__item">
+        <button class="qa__q" type="button" aria-expanded="false">
+          <span class="qa__qtext">1) 지금 보고 있는 수치가 ‘진짜 사용자 행동’인가?</span>
+          <span class="qa__icon" aria-hidden="true">+</span>
+        </button>
+        <div class="qa__a" hidden>
+          <p>
+            지표는 이벤트 기록의 결과라서, 로그 설계/집계 기준이 흔들리면 해석이 바로 깨집니다.
+            <b>중복 집계, 봇/테스트 트래픽, 이벤트 누락</b> 같은 “관측 오류”부터 의심합니다.
+          </p>
+          <ul>
+            <li>이벤트 정의(트리거/파라미터)가 일관적인가?</li>
+            <li>집계 윈도우/세그먼트 기준이 바뀌지 않았나?</li>
+            <li>데이터 누락/지연이 있는 구간은 없나?</li>
+          </ul>
+        </div>
+      </div>
+
+      <!-- 2 -->
+      <div class="qa__item">
+        <button class="qa__q" type="button" aria-expanded="false">
+          <span class="qa__qtext">2) ‘대표 지표’ 하나로 결론을 내도 되는가?</span>
+          <span class="qa__icon" aria-hidden="true">+</span>
+        </button>
+        <div class="qa__a" hidden>
+          <p>
+            대표 지표는 요약 도구지만, 단일 수치로 결론을 내리면 착시가 생깁니다.
+            <b>행동 지표(레버)</b>를 함께 보고 “왜 변했는지”를 분리합니다.
+          </p>
+          <ul>
+            <li>대표 지표를 움직이는 행동 지표는 무엇인가?</li>
+            <li>행동 지표가 안 움직였는데 대표 지표만 움직이면 착시 가능성</li>
+            <li>동일 지표라도 세그먼트별로 방향이 다른지 확인</li>
+          </ul>
+        </div>
+      </div>
+
+      <!-- 3 -->
+      <div class="qa__item">
+        <button class="qa__q" type="button" aria-expanded="false">
+          <span class="qa__qtext">3) ‘해석이 위험한 구간(Edge Case)’은 어디인가?</span>
+          <span class="qa__icon" aria-hidden="true">+</span>
+        </button>
+        <div class="qa__a" hidden>
+          <p>
+            평균만 보면 중요한 예외가 사라집니다. 특정 조건에서만 발생하는 이슈(엣지 케이스)는
+            제품 리스크로 직결되므로 먼저 고정합니다.
+          </p>
+          <ul>
+            <li>신규/기존, OS/기기, 유입 채널, 지역 등 세그먼트 분해</li>
+            <li>상위 1%/하위 1% 사용자 행동이 전체 지표를 왜곡하는지</li>
+            <li>특정 시간대/배포 직후 급변 구간이 있는지</li>
+          </ul>
+        </div>
+      </div>
+
+      <!-- 4 -->
+      <div class="qa__item">
+        <button class="qa__q" type="button" aria-expanded="false">
+          <span class="qa__qtext">4) 지금 변화는 ‘원인(인과)’인가, ‘동시 발생(상관)’인가?</span>
+          <span class="qa__icon" aria-hidden="true">+</span>
+        </button>
+        <div class="qa__a" hidden>
+          <p>
+            지표 변화가 보인다고 해서 곧바로 “원인”이라고 말하면 위험합니다.
+            배포/프로모션/시즌성/외부 이슈 등 <b>동시 요인</b>을 먼저 체크합니다.
+          </p>
+          <ul>
+            <li>같은 시점에 배포/정책/가격/캠페인이 있었나?</li>
+            <li>코호트(가입 시점) 기준으로도 동일하게 변화하는가?</li>
+            <li>대조군(비노출) 또는 전후 비교가 가능한가?</li>
+          </ul>
+        </div>
+      </div>
+
+      <!-- 5 -->
+      <div class="qa__item">
+        <button class="qa__q" type="button" aria-expanded="false">
+          <span class="qa__qtext">5) ‘좋아진 것처럼 보이는 착시’ 가능성은?</span>
+          <span class="qa__icon" aria-hidden="true">+</span>
+        </button>
+        <div class="qa__a" hidden>
+          <p>
+            숫자가 좋아졌는데 실제 경험은 나빠질 수 있습니다.
+            예: 전환↑지만 환불/불만↑, 클릭↑지만 만족↓ 같은 상황을 반드시 가정합니다.
+          </p>
+          <ul>
+            <li>전환율↑와 함께 CS/VOC, 환불, 이탈이 같이 움직이나?</li>
+            <li>단기 지표는 좋아졌지만 리텐션이 무너지는지</li>
+            <li>유입 품질(채널 믹스) 변화로 착시가 생겼는지</li>
+          </ul>
+        </div>
+      </div>
+
+      <!-- 6 -->
+      <div class="qa__item">
+        <button class="qa__q" type="button" aria-expanded="false">
+          <span class="qa__qtext">6) 이 결론을 문서로 남길 때 ‘오해 방지 문장’은?</span>
+          <span class="qa__icon" aria-hidden="true">+</span>
+        </button>
+        <div class="qa__a" hidden>
+          <p>
+            PM 문서에서 가장 중요한 건 결론이 아니라 <b>결론의 적용 범위</b>입니다.
+            “이 결론은 언제/어디까지 유효한가”를 같이 적어 오해를 차단합니다.
+          </p>
+          <ul>
+            <li>전제: 데이터 기간/세그먼트/정의</li>
+            <li>한계: 관측 불가능한 요인, 샘플 편향</li>
+            <li>다음 액션: 추가 실험/검증 계획</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+
+    <div class="qa__cta reveal">
+      <a class="btn btn--primary" href="QA_사고_프레임_문서.pdf" target="_blank" rel="noopener">QA 프레임 PDF 열기</a>
+      <a class="btn btn--ghost" href="#evidence">이력서 Evidence로 이동</a>
+    </div>
+  </div>
+</section>
+
     </section>
 
     <!-- Evidence -->
